--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,49 @@
-h1{
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+body{
     font-family: "Poppins";
-    font-size: 39px;
+}
+
+
+header{
+    background-image:linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.8)), url("./Images/lion-3.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 250px 0;
+    color: white;
+    text-align: center;
+}
+header h1{
+    font-size: 90px;
     font-weight: 800;
+    line-height: 1;
+}
+header p{
+    font-size: 40px;
+font-family: cursive;
+font-weight: 500;
     
+}
+header a{
+    background-color: white;
+    color: black;
+    text-decoration: none;
+    padding: 13px 30px;
+    margin-top: 30px;
+    display: inline-block;
+    text-transform: capitalize;
+    font-size: 28px;
+    outline: none;
+    border-radius: 4px;
+    cursor: pointer;
+
+}
+footer {
+    text-align: center;
+    font-size: 18px;
+    margin-top: 50px; /* Adds spacing */
 }
