--- a/src/style.css
+++ b/src/style.css
@@ -5,11 +5,13 @@
 }
 body{
     font-family: "Poppins";
-    max-width: 100%;
-    height: 100vh;
+   
 }
 
-
+.container {
+max-width: 1400px;
+width: 100%;
+}
 header{
     background-image:linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.8)), url("./Images/lion-3.jpg");
     background-position: center;
