--- a/src/style.css
+++ b/src/style.css
@@ -9,15 +9,16 @@ body{
 }
 
 .container {
-max-width: 1400px;
+max-width: 1200px;
+/* width: 100%; */
 
 }
 header{
     background-image:linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.8)), url("./Images/lion-3.jpg");
-    background-position: center;
+    /* background-position: center; */
     background-repeat: no-repeat;
     background-size: cover;
-    padding: 90px 0;
+    padding: 150px 0;
     color: white;
     text-align: center;
 }
