--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,7 @@ body{
 
 .container {
 max-width: 1200px;
+/* margin: 0 auto; */
 
 
 }
@@ -21,18 +22,19 @@ header{
     padding: 150px 0;
     color: white;
     text-align: center;
-    /* margin: 10px 0; */
-    /* background-attachment: fixed; */
+ 
+
 }
 header h1{
     font-size: 90px;
     font-weight: 800;
-    line-height: 1;
+    /* line-height: 1; */
 }
 header p{
     font-size: 40px;
 font-family: cursive;
 font-weight: 500;
+padding: 10px;
     
 }
 header a{
@@ -52,5 +54,38 @@ header a{
 footer {
     text-align: center;
     font-size: 18px;
-    margin-top: 50px; /* Adds spacing */
+    margin-top: 50px; 
+}
+@media (max-width:900px) {
+    header{
+        padding: 60px 0;
+    }
+    header h1{
+        font-size: 50px;
+    }
+    header p{
+        font-size: 25px;
+    }
+    
+}
+@media (max-width:500px) {
+    header{
+        padding: 30px 0;
+    }
+    
+    header h1{
+        font-size: 36px;
+    }
+
+     header p{
+        font-size: 21px;
+        padding: 10px;
+    }
+    
+     header a{
+        font-size: 23px;
+        margin-top: 15px;
+        padding: 10px 18px;
+    }
+    
 }
