--- a/src/style.css
+++ b/src/style.css
@@ -62,28 +62,57 @@ padding: 30px;
 footer h3{
     font-size: 24px;
     font-weight: 500;
-    /* padding: 10px; */
+    padding: 10px 0;
+    margin-bottom: 10px;
+    display: inline-block;
+    border-bottom: 2px solid #fff;
+   
 }
 
  footer h5{
      font-size: 17px;
+     padding-bottom: 10px;
     
  }
  footer p{
-     padding: 5px 0;
+     padding: 10px;
      line-height: 1;
-     font-size: 16px;
-     opacity: 0.7;
+     font-size: 18px;
+     opacity: 0.8;
  }
 
 
-footer li{
+footer  ul li{
     list-style: none;
+    padding: 5px;
 
 }
+ footer li a{
+     text-decoration: none;
+     font-size: 21px;
+     color: #fff;
+     line-height: 1;
+    
+ }
+ footer li a:hover{
+     color: rebeccapurple;
+     font-size: 20px;
+     
+ }
+ footer span{
+  font-size: 20px;
+  padding: 20px;
+
+ }
 .grid{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 2fr 1fr;
+}
+iframe{
+    width: 400px;
+    height: 180px;
+    border-radius: 4px;
+ 
 }
 
 @media (max-width:900px) {
@@ -96,6 +125,28 @@ footer li{
     header p{
         font-size: 25px;
     }
+    footer{
+        padding: 0;
+        margin-top: 14px;
+       
+    }
+    footer .grid{
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 12px;
+    }
+    footer p{
+        font-size: 15px;
+        padding: 4px;
+    }
+    footer ul a {
+        font-size: 14px;
+        padding: 0;
+    }
+    footer span{
+        font-size: 17px;
+        padding: 10px;
+    }
     
 }
 @media (max-width:500px) {
@@ -105,6 +156,7 @@ footer li{
     
     header h1{
         font-size: 36px;
+
     }
 
      header p{
@@ -117,5 +169,37 @@ footer li{
         margin-top: 15px;
         padding: 10px 18px;
     }
+    footer .grid{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-gap:18px;
+    }
+    footer span{
+        font-size: 14px;
+        padding: 0;
+    }
     
 }
+/* @media (min-width:9800px) {
+    footer .grid{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        gap: 13px;
+    }
+    footer p{
+        font-size: 16px;
+        padding: 10px;
+    }
+    footer ul li{
+        padding: 5px;
+        font-size: 19px;
+    }
+    footer span{
+     
+    }
+    footer iframe{
+        width: 300px;
+        height: 180px;
+    }
+    
+} */
