--- a/src/style.css
+++ b/src/style.css
@@ -74,12 +74,20 @@ footer h3{
      padding-bottom: 10px;
     
  }
+footer p strong{
+ font-weight: 800;
+ line-height: 1;
+ color: ghostwhite;
+ 
+   
+}
  footer p{
      padding: 10px;
      line-height: 1;
      font-size: 18px;
-     opacity: 0.8;
+     opacity: 0.9;
  }
+
 
 
 footer  ul li{
