--- a/src/style.css
+++ b/src/style.css
@@ -9,8 +9,8 @@ body{
 }
 
 .container {
-max-width: 1500px;
-margin: 20px auto;
+max-width: 1200px;
+margin: auto;
 
 
 }
@@ -19,7 +19,7 @@ header{
     /* background-position: center; */
     background-repeat: no-repeat;
     background-size: cover;
-    padding: 150px 0;
+    padding: 120px 0;
     color: white;
     text-align: center;
  
@@ -27,7 +27,7 @@ header{
 }
 header h1{
     font-size: 90px;
-    font-weight: 800;
+    font-weight: 900;
     /* line-height: 1; */
 }
 header p{
@@ -55,7 +55,8 @@ header a{
     display: grid;
     grid-template-columns: 1fr; /* Ensures divs stack naturally */
     gap: 20px; /* Adds spacing between divs */
-    /* max-width: 1200px; */
+    max-width: 1200px;
+    margin: 0 auto;
    
     border-radius: 3px;
     
