--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,7 @@
 }
 body{
     font-family: "Poppins";
+    font-size: 17px;
    
 }
 
@@ -73,6 +74,36 @@ font-weight: 300;
     margin: 0 auto;
 
 
+}
+.tourist-places{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* 3 equal columns */
+    gap: 20px;
+    max-width: 1200px;
+    margin: auto;
+    padding-bottom: 40px;
+}
+.tourist-places div {
+    background-color: #f7f7f7; /* Light background */
+    padding: 10px;
+    text-align: center;
+    border-radius: 8px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+ h2{
+     text-align: center;
+     padding: 20px;
+     font-size: 30px;
+     line-height: 1;
+     font-weight: 700;
+
+}
+.tourist-places img{
+   width: 100%; /* Responsive images */
+    max-height: 200px; /* Keep aspect ratio */
+    object-fit: cover; /* Prevent stretching */
+    border-radius: 8px;
+    
 }
 footer {
 color: #fff;
