--- a/src/style.css
+++ b/src/style.css
@@ -67,6 +67,7 @@ header a{
 }
 .main-sec h1{
     text-align: center;
+    font-size: 30px;
 }
 .main-sec  p{
     background-color: rgb(252, 249, 246);
@@ -94,6 +95,11 @@ max-width: 950px;
     /* text-align: center; */
     border-radius: 8px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+ transition: 0.2s ease-in-out;
+}
+.tourist-places div :hover{
+ transform: scaleY(1.1);
+ 
 }
 .tourist-places p{
     /* text-align: center; */
@@ -128,7 +134,7 @@ max-width: 950px;
 .tourist-places img{
    width: 100%; 
     border-radius: 10px;
-   height: 250px;
+   height: 200px;
    object-fit: cover;
     
     
@@ -250,6 +256,53 @@ iframe{
 }
 
 @media (max-width:900px) {
+    .main-sec p{
+        font-size: 19px;
+        padding: 8px 9px;
+        max-width: 800px;
+        /* line-height: 1.8; */
+    }
+ .tourist-places{
+     grid-template-columns: 1fr;
+     gap: 17px;
+ }
+ .tourist-places img{
+     width:100% ;
+   height: 300px;
+   object-fit: cover;
+ }
+ .tourist-places a{
+   display: block;
+  width: 50%;
+  padding: 12px 15px;
+  margin: 14px auto;
+  text-align: center;
+ }
+    .kenya-culture p{
+        font-size: 20px;
+    }
+    .kenya-culture h2{
+        margin-bottom: 0;
+       
+    }
+    section .cards{
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 15;
+        padding: 10px;
+    }
+    .card img{
+        width: 90%;
+       
+    }
+    .card em{
+        font-size: 22px;
+        line-height: 1.9;
+    }
+    .card h3{
+        font-size: 26px;
+        padding: 14px;
+    }
     header{
         padding: 60px 0;
     }
@@ -286,7 +339,10 @@ iframe{
     }
     
 }
-@media (max-width:500px) {
+@media (max-width:600px) {
+    .main-sec h1{
+        font-size: 25px;
+    }
     header{
         padding: 30px 0;
     }
@@ -314,6 +370,40 @@ iframe{
     footer span{
         font-size: 14px;
         padding: 0;
+    }
+    
+}
+@media (max-width:480px) {
+    .main-sec h1{
+        font-size: 19px;
+    }
+    .main-sec h2{
+        font-size: 21px;
+    }
+    .main-sec p{
+        font-size: 15px;
+        max-width: 500px;
+      line-height: 2;
+    }
+    .tourist-places{
+     grid-template-columns: 1fr;
+     gap: 24px;
+     
+      margin: 0;
+ }
+    .tourist-places img{
+        width: 100%;
+     height: 250px;  
+    }
+    .tourist-places p{
+        font-size: 20px;
+    }
+    .tourist-places a{
+        display: block;
+  width: 60%;
+  padding: 17px 0;
+  margin: 12px auto;
+  text-align: center;
     }
     
 }
