--- a/src/style.css
+++ b/src/style.css
@@ -8,9 +8,9 @@ body{
     font-size: 17px;
    
 }
-body h2,h3,h4,h5{
+/* body h2,h3,h4,h5{
      color: #2c3e50;
-}
+} */
 .container {
 max-width: 1200px;
 margin:20px auto;
@@ -59,9 +59,8 @@ header a{
 } */
 .main-sec {
     display: grid;
-    grid-template-columns: 1fr; /* Ensures divs stack naturally */
-    gap: 20px; /* Adds spacing between divs */
-   
+    grid-template-columns: 1fr; 
+    gap: 20px; 
     border-radius: 3px;
     
 }
@@ -70,8 +69,7 @@ header a{
     font-size: 30px;
 }
 .main-sec  p{
-    background-color: rgb(252, 249, 246);
-
+background-color: rgb(252, 249, 246);
 padding: 18px;
 font-size: 21px;
 line-height: 1.9;
@@ -150,6 +148,7 @@ max-width: 950px;
     font-size: 34px;
     margin-bottom: 20px;
     line-height: 1.5;
+    color: #333;
 }
 .kenya-culture p{
     font-size: 23px;
@@ -185,14 +184,14 @@ max-width: 950px;
   }
 footer {
 color: #fff;
-/* background-color: #0011; */
 background-color: #000;
 margin-top: 40px;
 text-align: center;
 padding: 30px;
+
 }
 footer h3{
-    font-size: 24px;
+    font-size: 27px;
     font-weight: 500;
     padding: 10px 0;
     margin-bottom: 10px;
@@ -216,7 +215,7 @@ footer p strong{
  footer p{
      padding: 10px;
      line-height: 1;
-     font-size: 18px;
+     font-size: 19px;
      opacity: 0.9;
  }
 
@@ -225,11 +224,12 @@ footer p strong{
 footer  ul li{
     list-style: none;
     padding: 5px;
+     font-size: 22px;
 
 }
  footer li a{
      text-decoration: none;
-     font-size: 21px;
+     /* font-size: 24px; */
      color: #fff;
      line-height: 1;
     
@@ -239,9 +239,10 @@ footer  ul li{
      font-size: 20px;
      
  }
- footer span{
+ footer span a{
   font-size: 20px;
   padding: 20px;
+  color: #fff;
 
  }
 .grid{
@@ -250,9 +251,68 @@ footer  ul li{
 }
 iframe{
     width: 400px;
-    height: 160px;
+    /* height: 160px; */
     border-radius: 4px;
  
+}
+
+@media (max-width: 1060px) {
+  .tourist-places {
+    grid-template-columns: 1fr; 
+    padding: 10px;
+  }
+
+  .tourist-places img {
+    width: 100%;
+    height: auto;
+  }
+
+  .tourist-places p {
+    font-size: 23px;
+    text-align: center;
+    padding: 10px 0;
+  }
+
+  .tourist-places a {
+    display: block;
+    width: 40%;
+    font-size: 21px;
+    margin: 15px auto;
+    padding: 18px 0;
+    text-align: center;
+  }
+  section .cards{
+      display: grid;
+      grid-template-columns: 1fr;
+      gap:20px;
+  }
+  .card h3{
+      font-size: 25px;
+  }
+  .kenya-culture img{
+      width: 80%;
+  }
+  .card em{
+      font-size: 18px;
+      padding: 9px;
+  }
+ .grid{
+  /* padding: 30px 20px; */
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+  }
+ 
+  
+  footer iframe{
+      width: 100%;
+      height: 200px;
+  }
+  footer span{
+      font-size: 23px;
+     
+  }
+
 }
 
 @media (max-width:900px) {
@@ -327,7 +387,7 @@ iframe{
         padding: 4px;
     }
     footer ul a {
-        font-size: 14px;
+        font-size: 19px;
         padding: 0;
     }
     footer span{
@@ -337,15 +397,20 @@ iframe{
       .tourist-places {
         grid-template-columns: 1fr;
     }
+  footer iframe {
+    width: 100%;
+    height: 200px;
+  }
     
 }
-@media (max-width:600px) {
+@media (max-width:650px) {
     .main-sec h1{
         font-size: 25px;
     }
     header{
         padding: 30px 0;
     }
+
     
     header h1{
         font-size: 36px;
@@ -362,6 +427,18 @@ iframe{
         margin-top: 15px;
         padding: 10px 18px;
     }
+    .tourist-places a{
+     display: block;
+  width: 70%;
+  padding: 12px 19px;
+  margin: 14px auto;
+  text-align: center;
+    
+    }
+    .tourist-places img{
+        width: 100%;
+        height: 200px;
+    }
     footer .grid{
         display: grid;
         grid-template-columns: 1fr;
@@ -371,8 +448,16 @@ iframe{
         font-size: 14px;
         padding: 0;
     }
+    footer h3{
+        font-size: 23px;
+    }
+ footer iframe {
+    width: 100%;
+    height: 200px;
+  }
     
 }
+
 @media (max-width:480px) {
     .main-sec h1{
         font-size: 19px;
@@ -405,28 +490,61 @@ iframe{
   margin: 12px auto;
   text-align: center;
     }
+    .kenya-culture h2{
+        font-size: 20px;
+        margin-bottom: 0;
+    }
+    .kenya-culture p{
+        font-size: 15px;
+    }
+    .card img{
+        width: 100%;
+    }
+    .card h3{
+        font-size: 19px;
+        padding: 0;
+    }
+    .card em{
+        font-size: 14px;
+        padding: 0;
+    }
     
 }
-/* @media (min-width:9800px) {
-    footer .grid{
-        display: grid;
-        grid-template-columns: repeat(3,1fr);
-        gap: 13px;
+
+@media (max-width:300px) {
+    header h1{
+        font-size: 28px;
     }
-    footer p{
-        font-size: 16px;
-        padding: 10px;
+    header a{
+        padding: 7px 10px;
     }
-    footer ul li{
-        padding: 5px;
-        font-size: 19px;
+     .main-sec h1{
+        font-size: 18px;
     }
-    footer span{
-     
+    .main-sec h2{
+        font-size: 17px;
     }
-    footer iframe{
-        width: 300px;
-        height: 180px;
+    .main-sec p{
+       font-size: 14px;
+       max-width: 400px;
     }
+    .tourist-places img{
+        width: 100%;
+   
+ }
+ 
+ .tourist-places p{
+     font-size: 13px;
+ }
+ .kenya-culture img{
+     width: 100%;
+ }
+ .kenya-culture h2{
+     font-size: 16px;
+     padding: 7px;
+ }
+ .kenya-culture p{
+     font-size: 14px;
+ }
     
-} */
+}
